# longshore

./: .gitignore  CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/scripts/: seed_action_smoke.py
.github/workflows/: action-smoke.yml  ci.yml  release.yml
src/longshore/: __init__.py  cli.py  contract.py  engine.py  render.py  ssm.py
src/longshore/data/: services.yaml
tests/: conftest.py  test_cli.py  test_contract.py  test_engine.py  test_render.py  test_ssm.py
