[project]
name = "longshore"
version = "0.1.0rc1"
description = "Contract-driven ECS deploys: render a task definition from SSM, register it, repoint the service, observe the rollout"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tela Systems", email = "paul@tela.systems" }]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "pyyaml>=6.0",
]
keywords = ["ecs", "fargate", "aws", "deploy", "ssm", "task-definition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Repository = "https://github.com/telasystems/longshore"
Issues = "https://github.com/telasystems/longshore/issues"
Changelog = "https://github.com/telasystems/longshore/releases"

[project.scripts]
longshore = "longshore.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[ssm]>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/longshore"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "moto"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
